[package]
name = "nltui"
version = "0.1.0"
authors = ["Jacob Moeller <jacobmoe@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.6.2"
termion = "1.5"
rand = "0.6"
failure = "0.1"
unicode-segmentation = "1.2"
unicode-width = "0.1"